--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "cloudinary-react": "^1.8.1",
     "dotenv": "^16.3.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
