--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "cloudinary": "^2.0.0",
     "cloudinary-react": "^1.8.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.2",
     "formik": "^2.4.5",
+    "https-browserify": "^1.0.0",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -27,6 +33,9 @@
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
