--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.0",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "helmet": "^7.1.0",
+    "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.2"
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
+    "socket.io": "^4.7.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3"
   }
 }
