--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.0.1",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
